refactor attachment
